[CF-09] Accounts Service Layer
